2013-10-08  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Integrate XML validation tests into build infrastructure.

	* Makefile.in (all): Add a primary dependency on...
	(check): ...this new build goal; implement it, in terms of...
	($srcdir/tests/configure, $builddir/tests/Makefile): ...these new
	intermediates; define procedures to build them.

2013-10-08  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Implement an XML validation test suite.

	* tests: New directory.
	* tests/configure.ac tests/Makefile.in: New files.
	* tests/xmlcheck.cpp tests/pkgspec.xsd: Likewise.

2013-10-08  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Delegate version assignment to VERSION.m4 auxiliary file.

	* VERSION.m4: New file.
	* configure.ac (AC_INIT): m4_include, and use it.

2013-10-04  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Reduce "Basic Setup" group GCC inventory to only "bin" packages.

	* mingw32/mingw32-gcc4.xml (ada, c++, fortran, objc): Move affiliate
	reference for "Basic Setup" from package to "bin" component.

	* mingw32-gcc4.xml.lzma: Regenerated and published.
	* mingw32-package-list.lzma package-list.xml.lzma: Likewise.

	* common/issue.log mingw32/issue.log: Updated accordingly.

2013-10-04  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Publish mingw-get release 0.6.2-beta-20131004-1.

	* mingw32/mingw32-mingw-get.xml:
	(mingw-get) <bin>: Add 0.6.2-beta-20131004-1 release specification;
	(mingw-get) <gui, lic>: Likewise.
	(pkginfo) <bin>: Likewise.

	* mingw32-mingw-get.xml.lzma: Regenerated and published.
	* mingw32-package-list.lzma package-list.xml.lzma: Likewise.

	* common/issue.log mingw32/issue.log: Updated accordingly.

2013-09-26  Earnie Boyd  <earnie@users.sourceforge.net>

	Correct more packaging issues.

	* mingw32/mingw32-gcc4.xml: Release 4.8.1-3 to correct library version
	issues.
	* mingw32/mingw32-mpc.xml: Release 1.0.1-2 to correct library version
	issues.